--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section>
         <h3>Here's a time line of Dr. Borlaug's life:</h3>
         <ul>
-          <li></li>
+          <li><strong></strong></li>
           <li></li>
           <li></li>
           <li></li>
